🔧 build(CJR): Obsolete deps
Removed unused dependencies from the project

--- a/bio-page/package.json
+++ b/bio-page/package.json
@@ -4,7 +4,5 @@
   "main": "index.html",
   "repository": "https://www.github.com/GabrielRQueiroz/pt-cjr/tree/master/bio-page",
   "license": "MIT",
-  "dependencies": {
-    "font-awesome": "^4.7.0"
-  }
+  "dependencies": {}
 }
